--- a/Hyprland/waybar/themes/tomorrow-night/style.css
+++ b/Hyprland/waybar/themes/tomorrow-night/style.css
@@ -88,6 +88,6 @@ window#waybar.empty #window  {
     margin-right: 3px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    background: #F00;
-    color: #FFF;
+    background: #cc6666;
+    color: #1d1f21;
 }
