wofi config for theme switching

--- a/River/.config/wofi/base.css
+++ b/River/.config/wofi/base.css
@@ -1,7 +1,7 @@
 #window {
-  border: 4px solid @border;
-  background-color: @background;
-  color: @font;
+  border: 4px solid @focus;
+  background-color: @base;
+  color: @focus;
 }
 
 #outer-box {
@@ -12,9 +12,9 @@
   all: unset;
   margin: -10px;
   padding: 6px 10px;
-  background-color: @background;
+  background-color: @base;
   border-radius: 6px;
-  color: @font;
+  color: @fous;
 }
 
 #scroll {
@@ -28,8 +28,8 @@
 }
 
 #entry:selected {
-  background-color: @select;
-  color: @background;
+  background-color: @focus;
+  color: @base;
 }
 
 #text {
@@ -44,7 +44,7 @@
 }
 
 #expander-box {
-  background-color: @background;
+  background-color: @base;
   border-radius: 6px;
   margin-top: 4px;
 }
