--- a/River/.config/wofi/style.css
+++ b/River/.config/wofi/style.css
@@ -1,5 +1,5 @@
-@define-color base #1e2326;
-@define-color focus #a7c080;
+@define-color base #1d2021;
+@define-color focus #fbf1c7;
 
 #window {
   border: 4px solid @focus;
@@ -13,7 +13,7 @@
 
 #input {
   all: unset;
-  margin: -10px;
+  margin: 10px;
   padding: 6px 10px;
   background-color: @base;
   border-radius: 6px;
