--- a/River/.config/waybar/base.css
+++ b/River/.config/waybar/base.css
@@ -1,14 +1,14 @@
 * {
     font-family: Terminess Nerd Font;
     font-size: 13px;
-    color: @white; /* PONER BLANCO */
+    color: @white;
 }
 
 window#waybar {
-    background-color: @base; /* PONER BASE */
+    background-color: @base;
     border-style: solid;
     border-width: 4;
-    border-color: @unfocus; /* PONER BORDE SIN FOCO */
+    border-color: @unfocus;
 }
 
 button {
@@ -19,11 +19,11 @@ button {
 
 button:hover {
     background: inherit;
-    box-shadow: inset 0 -4px @special; /* PONER ESPECIAL */
+    box-shadow: inset 0 -4px @focused;
 }
 
 #tags {
-    margin-left: 15px; /* ESPACIO IZQ */
+    margin-left: 15px;
 }
 
 #tags button {
@@ -31,11 +31,11 @@ button:hover {
 }
 
 #tags button.focused {
-    box-shadow: inset 0 -4px @focused; /* PONER Focus */
+    box-shadow: inset 0 -4px @special;
 }
 
 #tags button.urgent {
-    box-shadow: inset 0 -4px @red; /* PONER ROJO */
+    box-shadow: inset 0 -4px @red;
 }
 
 #clock,
@@ -50,19 +50,19 @@ button:hover {
 }
 
 #battery {
-    margin-right: 25px; /* ESPACIO DERECHA */
+    margin-right: 25px;
 }
 
 @keyframes blink {
     to {
-        background-color: @white; /* CAMBIAR A BLANCO */
-        color: @black; /* CAMBIAR A NEGRO */
+        background-color: @white;
+        color: @black;
     }
 }
 
 #battery.critical {
-    background-color: @red; /* CAMBIAR A ROJO */
-    color: @white; /* PONER BLANCO */
+    background-color: @red;
+    color: @white;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: steps(12);
@@ -85,5 +85,5 @@ button:hover {
 
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
-    background-color: @red; /* PONER ROJO */
+    background-color: @red;
 }
