--- a/River/.config/waybar/base.css
+++ b/River/.config/waybar/base.css
@@ -1,89 +1,228 @@
+@define-color warning 	@bryellow;
+@define-color critical	@red;
+@define-color unfocused	@bg2;
+@define-color focused	@braqua;
+@define-color inactive	@purple;
+@define-color sound	@brpurple;
+@define-color network	@purple;
+@define-color memory	@braqua;
+@define-color cpu	@green;
+@define-color temp	@brgreen;
+@define-color tray	@bryellow;
+@define-color battery	@aqua;
+@define-color date	@black;
+@define-color time	@white;
+
+/* Keyframes */
+
+@keyframes blink-critical {
+	to {
+		/*color: @white;*/
+		background-color: @critical;
+	}
+}
+
+/* Reset all styles */
 * {
-    font-family: Terminess Nerd Font;
-    font-size: 13px;
-    color: @white;
+	border: none;
+	border-radius: 0;
+	min-height: 0;
+	margin: 0;
+	padding: 0;
+	box-shadow: none;
+	text-shadow: none;
+	icon-shadow: none;
 }
 
-window#waybar {
-    background-color: @base;
-    border-style: solid;
-    border-width: 4;
-    border-color: @unfocus;
+/* The whole bar */
+#waybar {
+	background: rgba(40, 40, 40, 0.8784313725); /* #282828e0 */
+	color: @white;
+	font-family: DejaVu Sans Mono, Siji;
+	font-size: 10pt;
+	/*font-weight: bold;*/
 }
 
-button {
-    box-shadow: inset 0 -4px transparent;
-    border: none;
-    border-radius: 0;
-}
-
-button:hover {
-    background: inherit;
-    box-shadow: inset 0 -4px @focused;
-}
-
-#tags {
-    margin-left: 15px;
-}
-
-#tags button {
-    background-color: transparent;
-}
-
-#tags button.focused {
-    box-shadow: inset 0 -4px @special;
-}
-
-#tags button.urgent {
-    box-shadow: inset 0 -4px @red;
-}
-
-#clock,
+/* Each module */
 #battery,
+#clock,
+#cpu,
+#memory,
+#network,
+#pulseaudio,
+#temperature,
+#tray,
 #backlight,
-#custom-pipewire,
-#tags button,
-#tray {
+#idle_inhibitor,
+#disk,
+#user,
+#mpris {
+	padding-left: 8pt;
+	padding-right: 8pt;
 }
 
-#clock {
+/* Each critical module */
+#memory.critical,
+#cpu.critical,
+#temperature.critical,
+#battery.critical.discharging {
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-name: blink-critical;
+	animation-duration: 1s;
+}
+
+/* Each warning */
+#network.disconnected,
+#memory.warning,
+#cpu.warning,
+#temperature.warning,
+#battery.warning.discharging {
+	color: @warning;
+}
+
+/* And now modules themselves in their respective order */
+
+/* Tags stuff */
+#tags button {
+	/*font-weight: bold;*/
+	padding-left: 2pt;
+	padding-right: 2pt;
+	color: @white;
+	background: @unfocused;
+}
+
+/* Inactive (on unfocused output) */
+#tags button.visible {
+	color: @white;
+	background: @inactive;
+}
+
+/* Active (on focused output) */
+#tags button.focused {
+	color: @black;
+	background: @focused;
+}
+
+/* Contains an urgent window */
+#tags button.urgent {
+	color: @black;
+	background: @warning;
+}
+
+/* Style when cursor is on the button */
+#tags button:hover {
+	background: @black;
+	color: @white;
+}
+
+#window {
+	margin-right: 35pt;
+	margin-left: 35pt;
+}
+
+#pulseaudio {
+	background: @sound;
+	color: @black;
+}
+
+#network {
+	background: @network;
+	color: @black;
+}
+
+#memory {
+	background: @memory;
+	color: @black;
+}
+
+#cpu {
+	background: @cpu;
+	color: @white;
+}
+
+#temperature {
+	background: @temp;
+	color: @black;
+}
+
+#tray {
+	background: @tray;
+	color: @black;
 }
 
 #battery {
-    margin-right: 25px;
+	background: @battery;
+	color: @black;
 }
 
-@keyframes blink {
-    to {
-        background-color: @white;
-        color: @black;
-    }
+#clock.date {
+	background: @date;
+	color: @white;
 }
 
-#battery.critical {
-    background-color: @red;
-    color: @white;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(12);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+#clock.time {
+	background: @time;
+	color: @black;
 }
 
-#backlight {
+#custom-arrow1 {
+	font-size: 11pt;
+	color: @time;
+	background: @date;
 }
 
-#custom-pipewire {
+#custom-arrow2 {
+	font-size: 11pt;
+	color: @date;
+	background: @tray;
 }
 
-#tray {
+#custom-arrow3 {
+	font-size: 11pt;
+	color: @tray;
+	background: @battery;
 }
 
-#tray > .passive {
-    -gtk-icon-effect: dim;
+#custom-arrow4 {
+	font-size: 11pt;
+	color: @battery;
+	background: @temp;
 }
 
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: @red;
+#custom-arrow5 {
+	font-size: 11pt;
+	color: @temp;
+	background: @cpu;
+}
+
+#custom-arrow6 {
+	font-size: 11pt;
+	color: @cpu;
+	background: @memory;
+}
+
+#custom-arrow7 {
+	font-size: 11pt;
+	color: @memory;
+	background: @network;
+}
+
+#custom-arrow8 {
+	font-size: 11pt;
+	color: @network;
+	background: @sound;
+}
+
+#custom-arrow9 {
+	font-size: 11pt;
+	color: @sound;
+	background: transparent;
+}
+
+#custom-arrow10 {
+	font-size: 11pt;
+	color: @unfocused;
+	background: transparent;
 }
