--- a/River/.config/waybar/base.css
+++ b/River/.config/waybar/base.css
@@ -1,3 +1,23 @@
+/* Colors (rose-pine) */
+@define-color black    #26233a;
+@define-color red      #eb6f92;
+@define-color green    #9ccfd8;
+@define-color yellow   #f6c177;
+@define-color blue     #31748f;
+@define-color purple   #c4a7e7;
+@define-color aqua     #ebbcba;
+@define-color gray     #e0def4;
+@define-color brgray   #47435d;
+@define-color brred    #ff98ba;
+@define-color brgreen  #c5f9ff;
+@define-color bryellow #ffeb9e;
+@define-color brblue   #5b9ab7;
+@define-color brpurple #eed0ff;
+@define-color braqua   #ffe5e3;
+@define-color white    #fefcff;
+@define-color bg2      #191724;
+@define-color special  #eb6f92;
+
 @define-color warning 	@bryellow;
 @define-color critical	@red;
 @define-color unfocused	@bg2;
@@ -39,11 +59,12 @@
 	background: rgba(40, 40, 40, 0.8784313725); /* #282828e0 */
 	color: @white;
 	font-family: DejaVu Sans Mono, Siji;
-	font-size: 10pt;
+	font-size: 8pt;
 	/*font-weight: bold;*/
 }
 
 /* Each module */
+#custom-launcher,
 #battery,
 #clock,
 #cpu,
@@ -83,6 +104,12 @@
 }
 
 /* And now modules themselves in their respective order */
+#custom-launcher {
+	padding-left: 2pt;
+	padding-right: 2pt;
+	color: @bg2;
+	background: @white;
+}
 
 /* Tags stuff */
 #tags button {
@@ -102,7 +129,7 @@
 /* Active (on focused output) */
 #tags button.focused {
 	color: @black;
-	background: @focused;
+	background: @special;
 }
 
 /* Contains an urgent window */
@@ -113,8 +140,8 @@
 
 /* Style when cursor is on the button */
 #tags button:hover {
-	background: @black;
-	color: @white;
+	background: @white;
+	color: @bg2;
 }
 
 #window {
@@ -225,4 +252,10 @@
 	font-size: 11pt;
 	color: @unfocused;
 	background: transparent;
+}
+
+#custom-arrow11 {
+	font-size: 11pt;
+	color: @white;
+	background: @bg2;
 }
