--- a/River/.config/waybar/style.css
+++ b/River/.config/waybar/style.css
@@ -59,11 +59,12 @@
 	background: rgba(40, 40, 40, 0.8784313725); /* #282828e0 */
 	color: @white;
 	font-family: DejaVu Sans Mono, Siji;
-	font-size: 10pt;
+	font-size: 8pt;
 	/*font-weight: bold;*/
 }
 
 /* Each module */
+#custom-launcher,
 #battery,
 #clock,
 #cpu,
@@ -103,6 +104,12 @@
 }
 
 /* And now modules themselves in their respective order */
+#custom-launcher {
+	padding-left: 2pt;
+	padding-right: 2pt;
+	color: @bg2;
+	background: @white;
+}
 
 /* Tags stuff */
 #tags button {
@@ -122,7 +129,7 @@
 /* Active (on focused output) */
 #tags button.focused {
 	color: @black;
-	background: @focused;
+	background: @special;
 }
 
 /* Contains an urgent window */
@@ -133,8 +140,8 @@
 
 /* Style when cursor is on the button */
 #tags button:hover {
-	background: @black;
-	color: @white;
+	background: @white;
+	color: @bg2;
 }
 
 #window {
@@ -245,4 +252,10 @@
 	font-size: 11pt;
 	color: @unfocused;
 	background: transparent;
+}
+
+#custom-arrow11 {
+	font-size: 11pt;
+	color: @white;
+	background: @bg2;
 }
