--- a/River/.config/waybar/style.css
+++ b/River/.config/waybar/style.css
@@ -1,22 +1,22 @@
-/* Colors (gruvbox) */
-@define-color black    #282828;
-@define-color red      #cc241d;
-@define-color green    #98971a;
-@define-color yellow   #d79921;
-@define-color blue     #458588;
-@define-color purple   #b16286;
-@define-color aqua     #689d6a;
-@define-color gray     #a89984;
-@define-color brgray   #928374;
-@define-color brred    #fb4934;
-@define-color brgreen  #b8bb26;
-@define-color bryellow #fabd2f;
-@define-color brblue   #83a598;
-@define-color brpurple #d3869b;
-@define-color braqua   #8ec07c;
-@define-color white    #ebdbb2;
-@define-color bg2      #1d2021;
-@define-color special  #fbf1c7;
+/* Colors (gruvbox-material) */
+@define-color black    #3C3836;
+@define-color red      #EA6962;
+@define-color green    #A9B665;
+@define-color yellow   #D8A657;
+@define-color blue     #7DAEA3;
+@define-color purple   #D3869B;
+@define-color aqua     #89B482;
+@define-color gray     #D4BE98;
+@define-color brgray   #3C3836;
+@define-color brred    #EA6962;
+@define-color brgreen  #A9B665;
+@define-color bryellow #D8A657;
+@define-color brblue   #7DAEA3;
+@define-color brpurple #D3869B;
+@define-color braqua   #89B482;
+@define-color white    #D4BE98;
+@define-color bg2      #282828;
+@define-color special  #89B482;
 
 
 @define-color warning 	@bryellow;
@@ -129,8 +129,8 @@
 
 /* Active (on focused output) */
 #tags button.focused {
-	color: @black;
-	background: @special;
+	color: @special;
+	background: @unfocused;
 }
 
 /* Contains an urgent window */
